# VEDA

./: .gitignore  CMakeLists.txt  CSFML Version.tif  LICENSE  Makefile  README.md  VEDA.pde  achievement.pde  affichage_erreurs.pde  afficher_niveau.pde  battleAPI_doc.txt  bg  buttons.pde  characters.pde  chargement_niveaux.pde  cutscenes.pde  dialogues.pde  fonctions_de_saisies.pde  gestion_du_fichier_option.pde  item.pde  keyPressed.pde  menus.pde  mousePressed.pde  multiplayer.pde  parser.pde  popUp.pde  sauvegarde.pde  save.pde  saveLevel.pde  string_mgr.pde  tab_mgr.pde
CSFML Version/: Makefile  icon.rc
CSFML Version/data/: icon
CSFML Version/data/characters/: sqd.chrdata  test.chr
CSFML Version/data/fonts/: Cracked-48.vlw  FinaleAlphaNotes-48.vlw  FinaleMallets-48.vlw  Jazz-48.vlw
CSFML Version/data/languages/de/: buttons.txt
CSFML Version/data/languages/en/: achievements.txt  buttons.txt  items.txt  keys.txt
CSFML Version/data/languages/fr/: achievements.txt  buttons.txt  items.txt  keys.txt
CSFML Version/data/levels/: Makefile  levelConverter.c
CSFML Version/data/levels/test/: characters.chr
CSFML Version/data/misc/: uncompressor.c
CSFML Version/include/: buttons_config.h  buttons_names.h  fonts_conf.h  functions.h  game_functions.h  macros.h  musics_conf.h  sounds_conf.h  sprites_conf.h  structs.h
CSFML Version/lib/concatf/: Makefile
CSFML Version/lib/concatf/sources/: my_putstar.c  my_showstr.c  sub_strings.c  uint_to_str.c
CSFML Version/src/: callbacks.c  clic_button.c  concat.c  drawSprite.c  get_nbrlen.c  inGame.c  initGame.c  int_to_str.c  launchGame.c  loadFonts.c  loadLanguages.c  loadLevel.c  loadMusics.c  loadSfx.c  loadSounds.c  loadSprites.c  load_buttons.c  main.c  mainMenu.c  manageEvents.c  saveFileMgr.c  settings.c  settingsMgr.c
data/: cutscenes  icon  items.txt
data/battles/alexandre/: battle_info.json
data/battles/alexandre/battle_normal/: actions.lua  boss.lua  bullets.json  info_file.json
data/characters/: sqd.chrdata  test.chr
data/dialogs/: script.lua
data/dialogs/alexandre/: en.txt  fr.txt
data/fonts/: ArialMT-48.vlw  BodoniOrnamentsITCTT-48.vlw  FreeMono-48.vlw  MesquiteStd-48.vlw  Parchment-Regular-48.vlw  Wingdings-Regular-48.vlw
data/godEater/: mode.txt
data/languages/de/: buttons.txt
data/languages/en/: achievements.txt  buttons.txt  items.txt  keys.txt
data/languages/fr/: achievements.txt  buttons.txt  items.txt  keys.txt
data/levels/: Makefile  levelConverter.c
data/levels/maze/: characters.chr
data/levels/test/: characters.chr
data/levels/test/dialogs/: fr.txt
data/levels/test/level/: floor0 - Copie.lvl  floor0.lvl
data/misc/: co  compressed_files  compressor.c  cutscenes  dialogs_fr  language_en  un  uncompressor.c  {NULL}
include/: array.h  battle.h  battle_api.h  battle_lua.h  button.h  buttons_config.h  buttons_names.h  callbacks.h  character.h  configs.h  context.h  creators.h  destructors.h  discord_rp.h  display.h  display_messagebox.h  enums.h  events.h  functions.h  game_functions.h  game_struct.h  globals.h  graphic.h  icon.h  io_utils.h  loading.h  logger.h  macros.h  menus.h  object.h  projectile.h  save.h  settings.h  sounds_conf.h  sprite.h  sprites_conf.h  structs.h  utils.h
include/data_structures/: array.h  battle.h  game_struct.h  language.h  list.h  object.h
lib/: discord-rpc.lib
lib/concatf/: Makefile
lib/concatf/include/: concatf.h  flags.h
lib/concatf/sources/: concat.c  concatf.c  float_to_str.c  get_nbrlen.c  int_to_str.c  my_putbase.c  my_putnbr_base.c  my_putstar.c  my_putstr_stderr.c  my_showstr.c  str.c
lib/configParser/: Makefile  main.c
lib/configParser/include/: configParser.h
lib/configParser/sources/: arrays.c  bools.c  data.c  debug.c  dicts.c  dumper.c  floats.c  ints.c  lists.c  parser.c  strings.c
src/: battle.c  battleAPI.c  callbacks.c  change_buffer.c  clic_button.c  commands.c  concat.c  discordRichPresence.c  dispMsg.c  drawSprite.c  inGame.c  initGame.c  launchGame.c  loadFonts.c  loadLanguages.c  loadLevel.c  loadSounds.c  load_buttons.c  main.c  mainMenu.c  manageEvents.c  manageEvents.c~  objects_creater.c  saveFileMgr.c  settings.c  settingsMgr.c
src/battle/: base_functions.c  battle.c  characters.c  lib.c  projectiles.c
src/battle/battle_lua/: battle_lua.c  characters.c  projectiles.c
src/buttons_callbacks/: callbacks.c  change_window_mode.c  menus.c  options_buttons.c  settings_menus.c
src/character/: deal_damages.c  exec_action.c  move.c
src/config_loader/: save_file_mgr.c  settingsMgr.c  settings_mgr.c
src/config_loader/save_file_mgr/: load.c  save.c
src/configs/: buttons.c  fonts.c  map_loading.c  menus.c  sounds.c  sprites.c
src/core/: clic_button.c  globals.c  launchGame.c  launch_game.c  manage_events.c  sighandlers.c
src/destroyers/: destroy_battle.c  destroy_buttons.c  destroy_characters.c  destroy_dialogs.c  destroy_fonts.c  destroy_languages.c  destroy_ressources.c  destroy_sfml_objects.c  destroy_sounds.c  destroy_sprites.c
src/dialogs/: commands.c  create_dialog.c  display_dialogs.c
src/display_map/: display_characters.c  display_terrain.c
src/events/: event_closed.c  event_joystick_button_pressed.c  event_joystick_moved.c  event_key_pressed.c  event_mouse_click.c  event_mouse_moved.c  event_mouse_released.c  event_text_entered.c  manage_events.c
src/hud/: display_damages.c  draw_hud.c  energy_bar.c  life_bar.c
src/load_ressources/: battle.c  buttons.c  context_callbacks.c  fonts.c  initGame.c  init_game.c  languages.c  level.c  loadingBar.c  loading_bar.c  projectiles.c  sounds.c  sprites.c
src/menus/: battle.c  change_buffer.c  in_game.c  mainMenu.c  main_menu.c  settings.c
src/saved_configs_mgr/save_file_mgr/loading/: game.c  map.c
src/utils/: disp_msg.c  display_buttons.c  display_rectangle.c  draw_sprite.c  draw_text.c  get_absolute_path.c  get_parent_folder.c  get_player.c  get_text_size.c  getline.c  io.c  is_folder.c  is_key_pressed.c  logger.c  play_sound_effect.c  random.c  split.c  transform_key_to_string.c  unicode_mgr.c
src/utils/io/: read.c  write.c
(+4 files in other folders)
