cmake_minimum_required(VERSION 3.12)
project(VEDA C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/concatf/include)
include_directories(lib/configParser/include)

add_executable(VEDA
        include/array.h
        include/battle.h
        include/battle_lua.h
        include/button.h
        include/buttons_names.h
        include/callbacks.h
        include/character.h
        include/configs.h
        include/creators.h
        include/destructors.h
        include/discord_rp.h
        include/display.h
        include/enums.h
        include/functions.h
        include/game_struct.h
        include/globals.h
        include/graphic.h
        include/icon.h
        include/language.h
        include/list.h
        include/loading.h
        include/macros.h
        include/menus.h
        include/object.h
        include/projectile.h
        include/save.h
        include/settings.h
        include/sprite.h
        include/structs.h
        include/utils.h
        lib/concatf/include/concatf.h
        lib/concatf/include/flags.h
        lib/concatf/sources/concat.c
        lib/concatf/sources/concatf.c
        lib/concatf/sources/float_to_str.c
        lib/concatf/sources/get_nbrlen.c
        lib/concatf/sources/int_to_str.c
        lib/concatf/sources/my_compute_power_rec_long.c
        lib/concatf/sources/my_putbase.c
        lib/concatf/sources/my_putnbr_base.c
        lib/concatf/sources/my_putstar.c
        lib/concatf/sources/my_putstr_stderr.c
        lib/concatf/sources/my_showstr.c
        lib/concatf/sources/my_strlen_rec.c
        lib/concatf/sources/str.c
        lib/concatf/sources/sub_strings.c
        lib/concatf/sources/uint_to_str.c
        lib/configParser/include/concatf.h
        lib/configParser/include/configParser.h
        lib/configParser/sources/arrays.c
        lib/configParser/sources/bools.c
        lib/configParser/sources/data.c
        lib/configParser/sources/debug.c
        lib/configParser/sources/dicts.c
        lib/configParser/sources/dumper.c
        lib/configParser/sources/floats.c
        lib/configParser/sources/ints.c
        lib/configParser/sources/lists.c
        lib/configParser/sources/parser.c
        lib/configParser/sources/strings.c
        src/battle/battle_lua/battle_lua.c
        src/battle/battle.c
        src/buttons_callbacks/callbacks.c
        src/config_loader/save_file_mgr.c
        src/config_loader/settings_mgr.c
        src/configs/buttons.c
        src/configs/fonts.c
        src/configs/menus.c
        src/configs/sounds.c
        src/configs/sprites.c
        src/core/clic_button.c
        src/core/globals.c
        src/core/launch_game.c
        src/core/manage_events.c
        src/core/sighandlers.c
        src/destroyers/destroy_battle.c
        src/destroyers/destroy_buttons.c
        src/destroyers/destroy_characters.c
        src/destroyers/destroy_dialogs.c
        src/destroyers/destroy_fonts.c
        src/destroyers/destroy_languages.c
        src/destroyers/destroy_ressources.c
        src/destroyers/destroy_sfml_objects.c
        src/destroyers/destroy_sounds.c
        src/destroyers/destroy_sprites.c
        src/dialogs/commands.c
        src/hud/draw_hud.c
        src/hud/energy_bar.c
        src/hud/life_bar.c
        src/load_ressources/buttons.c
        src/load_ressources/fonts.c
        src/load_ressources/init_game.c
        src/load_ressources/languages.c
        src/load_ressources/level.c
        src/load_ressources/loading_bar.c
        src/load_ressources/sounds.c
        src/load_ressources/sprites.c
        src/menus/battle.c
        src/menus/change_buffer.c
        src/menus/in_game.c
        src/menus/main_menu.c
        src/menus/settings.c
        src/utils/discord_rich_presence.c
        src/utils/disp_msg.c
        src/utils/display_buttons.c
        src/utils/display_rectangle.c
        src/utils/draw_sprite.c
        src/utils/draw_text.c
        src/utils/get_absolute_path.c
        src/utils/get_parent_folder.c
        src/utils/getline.c
        src/utils/transform_key_to_string.c
        src/main.c
        src/objects_creater.c
	icon.rc src/utils/unicode_mgr.c)

target_link_libraries(${PROJECT_NAME}
        lua
        discord-rpc
        csfml-graphics
        csfml-audio
        csfml-system
        csfml-window
        csfml-network)
